fixed navbar spacing

--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ body {
 }
 
 svg {
-    height: 20px;
+    height: 25px;
     width: auto;
 }
 
@@ -92,7 +92,7 @@ button:hover {
 .settings-list {
     display: flex;
     flex-direction: column;
-    gap: 0.8rem;
+    gap: 1rem;
     padding: 0.8rem;
     list-style-type: none;
     cursor: pointer;
@@ -101,7 +101,7 @@ button:hover {
 .main-list>div,
 .settings-list>div {
     display: flex;
-    gap: 1rem;
+    gap: 0.5rem;
     align-items: center;
 }
 
